--- a/Etapa-13/Aula-02/index.html
+++ b/Etapa-13/Aula-02/index.html
@@ -5,14 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <title>Relógio Digital</title>
+  <title></title>
 </head>
 
 <body>
-  <div class="clock-container">
-
-  </div>
-
   <script src="./app.js"></script>
 </body>
 
