--- a/projetos-exercicios/exercicio-39/index.html
+++ b/projetos-exercicios/exercicio-39/index.html
@@ -8,36 +8,36 @@
   <title>Exercício 39</title>
 </head>
 <body>
-  <!-- <div class="accordion">
+  <div class="accordion" data-js="accordion">
     <div class="accordion-item">
-      <button class="accordion-header">
-        <strong>Qual é o conteúdo do treinamento?</strong>
-        <i class="fas fa-angle-down"></i>
+      <button class="accordion-header" data-accordion-header="1" data-js="accordion-header">
+        <strong data-accordion-header="1">Qual é o conteúdo do treinamento?</strong>
+        <i class="fas fa-angle-down" data-accordion-header="1"></i>
       </button>
 
-      <div class="accordion-body">O treinamento foi desenhado para levar você do zero até a fluência em JavaScript - isto é, construir aplicações web (front-end) com JavaScript puro, através de 15 etapas. Você pode ver todas elas <a href="https://drive.google.com/file/d/1GCG6zZzu-nQIhdtMLNUKnSoQB8iy8uC3/view?usp=sharing" target="_blank">aqui</a>.</div>
+      <div class="accordion-body" data-accordion-body="1">O treinamento foi desenhado para levar você do zero até a fluência em JavaScript - isto é, construir aplicações web (front-end) com JavaScript puro, através de 15 etapas. Você pode ver todas elas <a href="https://drive.google.com/file/d/1GCG6zZzu-nQIhdtMLNUKnSoQB8iy8uC3/view?usp=sharing" target="_blank">aqui</a>.</div>
     </div>
   
     <div class="accordion-item">
-      <button class="accordion-header">
-        <strong>Quais são os requisitos técnicos para entrar?</strong>
-        <i class="fas fa-angle-down"></i>
+      <button class="accordion-header" data-accordion-header="2" data-js="accordion-header">
+        <strong data-accordion-header="2">Quais são os requisitos técnicos para entrar?</strong>
+        <i class="fas fa-angle-down" data-accordion-header="2"></i>
       </button>
 
-      <div class="accordion-body">Para entrar no CJRM, você precisa saber apenas o básico de HTML e CSS.</div>
+      <div class="accordion-body" data-accordion-body="2">Para entrar no CJRM, você precisa saber apenas o básico de HTML e CSS.</div>
     </div>
 
     <div class="accordion-item">
-      <button class="accordion-header">
-        <strong>Tenho uma dúvida, como posso falar com você?</strong>
-        <i class="fas fa-angle-down"></i>
+      <button class="accordion-header" data-accordion-header="3" data-js="accordion-header">
+        <strong data-accordion-header="3">Tenho uma dúvida, como posso falar com você?</strong>
+        <i class="fas fa-angle-down" data-accordion-header="3"></i>
       </button>
 
-      <div class="accordion-body">Se você assistiu o vídeo acima e ainda está com alguma dúvida, envie um e-mail para oi@rogermelo.com.br e eu irei atender você.</div>
+      <div class="accordion-body" data-accordion-body="3">Se você assistiu o vídeo acima e ainda está com alguma dúvida, envie um e-mail para oi@rogermelo.com.br e eu irei atender você.</div>
     </div>
-  </div> -->
-
-  <!-- <div class="intro">
+  </div>
+<!-- 
+  <div class="intro">
     <h1 class="fixed-text">Eu</h1>
     <h1 data-js="typing" class="typing"></h1>
   </div> -->
