--- a/projetos-exercicios/exercicio-39/index.html
+++ b/projetos-exercicios/exercicio-39/index.html
@@ -8,7 +8,7 @@
   <title>Exercício 39</title>
 </head>
 <body>
-  <div class="accordion" data-js="accordion">
+  <!-- <div class="accordion" data-js="accordion">
     <div class="accordion-item">
       <button class="accordion-header" data-accordion-header="1" data-js="accordion-header">
         <strong data-accordion-header="1">Qual é o conteúdo do treinamento?</strong>
@@ -35,9 +35,9 @@
 
       <div class="accordion-body" data-accordion-body="3">Se você assistiu o vídeo acima e ainda está com alguma dúvida, envie um e-mail para oi@rogermelo.com.br e eu irei atender você.</div>
     </div>
-  </div>
-<!-- 
-  <div class="intro">
+  </div> -->
+ 
+  <!-- <div class="intro">
     <h1 class="fixed-text">Eu</h1>
     <h1 data-js="typing" class="typing"></h1>
   </div> -->
