--- a/projetos-exercicios/exercicio-03/index.html
+++ b/projetos-exercicios/exercicio-03/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+   <meta charset="UTF-8">
+   <title></title>
+
+</head>
+
+<body>
+   <h1></h1>
+
+   <script src="./app.js"></script>
+</body>
+
+</html>
