--- a/projetos-exercicios/exercicio-08/index.html
+++ b/projetos-exercicios/exercicio-08/index.html
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+   <meta charset="UTF-8">
+   <title>Functions</title>
+</head>
+
+<body>
+   <script src="./app.js"></script>
+</body>
+
+</html>
