--- a/projetos-exercicios/exercicio-09/index.html
+++ b/projetos-exercicios/exercicio-09/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <article>
+    <header>
+      <h1>Sobre "Jurassic Park"</h1>
+    </header>
+
+    <section data-js="section"></section>
+  </article>
+  
   <script src="app.js"></script>
 </body>
 
