--- a/Etapa-15/Aula-02.01/index.html
+++ b/Etapa-15/Aula-02.01/index.html
@@ -27,8 +27,13 @@
     
       <button class="btn btn-primary">Adicionar game</button>
     </form>
+
+    <div class="d-grid gap-2 mt-5">
+      <button data-js="unsub" class="btn btn-info btn-lg">Desabilitar listeners em tempo real</button>
+    </div>
   </div>
 
+  <script type="module" src="../Aula-01/main.js"></script>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
