--- a/Etapa-15/Aula-03/index.html
+++ b/Etapa-15/Aula-03/index.html
@@ -27,8 +27,13 @@
     
       <button class="btn btn-primary">Adicionar game</button>
     </form>
-  </div>
 
+    <div class="d-grid gap-2 mt-5">
+      <button data-js="unsub" class="btn btn-info btn-lg">Desabilitar listeners em tempo real</button>
+    </div>
+  </div>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.4/purify.min.js" integrity="sha512-jGh38w63cHRzfBHtyKgEMMkJswUFXDA3YXrDjaE8ptzxV5DDkLDUDjtGUy5tmDkOXHWsItKfFjocaEtj1WuVnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
   <script type="module" src="./main.js"></script>
 </body>
 </html>
