--- a/Etapa-15/Aula-03.01/index.html
+++ b/Etapa-15/Aula-03.01/index.html
@@ -33,21 +33,21 @@
     </div>
   </nav>
 
-  <div data-js="modal-login" id="modal-login" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
+  <div data-js="modal" data-js="modal-login" data-js="modal" id="modal-login" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
     <div class="modal-content">
       <h4>Login</h4><br />
       <button data-js="button-form" class="btn red darken-1 z-depth-0">Entrar com Google</button>
     </div>
   </div>
 
-  <div id="modal-account" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
+  <div data-js="modal" id="modal-account" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
     <div class="modal-content center-align">
       <h4>Detalhes da conta</h4><br />
       <div data-js="account-details"></div>
     </div>
   </div>
 
-  <div id="modal-add-phrase" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
+  <div data-js="modal" id="modal-add-phrase" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
     <div class="modal-content">
       <h4>Adicionar frase</h4><br />
 
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="container phrases-container">
+  <div data-js="phrases-container" class="container phrases-container">
     <ul data-js="phrases-list" class="collapsible z-depth-0 phrases"></ul>
   </div>
 
