--- a/Etapa-05/aula-04-BUBLING-E-DELEGATION/index.html
+++ b/Etapa-05/aula-04-BUBLING-E-DELEGATION/index.html
@@ -13,7 +13,9 @@
    <h1>Todos</h1>
 
    <ul>
-      <li>Comprar frango</li>
+      <li>
+         <span>Comprar frango</span>
+      </li>
       <li>Ler livro</li>
       <li>Tocar violão</li>
       <li>Pagar as contas</li>
