--- a/Etapa-15/Aula-03.01/index.html
+++ b/Etapa-15/Aula-03.01/index.html
@@ -33,10 +33,10 @@
     </div>
   </nav>
 
-  <div data-js="modal" data-js="modal-login" data-js="modal" id="modal-login" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
+  <div data-js="modal" data-modal="modal-login" data-js="modal" id="modal-login" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
     <div class="modal-content">
       <h4>Login</h4><br />
-      <button data-js="button-form" class="btn red darken-1 z-depth-0">Entrar com Google</button>
+      <button data-js="button-google" class="btn red darken-1 z-depth-0">Entrar com Google</button>
     </div>
   </div>
 
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <div data-js="modal" id="modal-add-phrase" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
+  <div data-js="modal" data-modal="add-phrase" id="modal-add-phrase" class="modal blue-grey darken-4 blue-grey-text text-lighten-5">
     <div class="modal-content">
       <h4>Adicionar frase</h4><br />
 
@@ -72,6 +72,8 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="module" src="./app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.8/purify.min.js" integrity="sha512-M72KfQy4kPuLYC6CeTrN0eA17U1lXEMrr5qEJC/40CLdZGC3HpwPS0esQLqBHnxty2FIcuNdP9EqwSOCLEVJXQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- <script type="module" src="./app.js"></script> -->
+  <script type="module" src="./app-refatorado.js"></script>
 </body>
 </html>
